@@ -1,3 +1,14 @@
+2008-04-18  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Sam.
+
+        - Build fix.
+
+        * page/Console.cpp:
+        (WebCore::Console::profile):
+        * page/Console.h:
+        * page/Console.idl:
+
 2008-04-18  Eric Seidel  <eric@webkit.org>
 
         Reviewed by darin.
